--- a/pages/cursos/Paginas Web.html
+++ b/pages/cursos/Paginas Web.html
@@ -25,151 +25,160 @@
 </head>
 
 <body>
-  <!-- Marquee (Texto rolante de destaque) -->
-  <header class="nav-header">
-    <div class="marquee-text">
-      <ul>
-        <li>Impactando vidas, para mudar o mundo</li>
-        <li>Impactando vidas, para mudar o mundo</li>
-        <li>Impactando vidas, para mudar o mundo</li>
-        <li>Impactando vidas, para mudar o mundo</li>
-        <li>Impactando vidas, para mudar o mundo</li>
-        <li>Impactando vidas, para mudar o mundo</li>
-        <li>Impactando vidas, para mudar o mundo</li>
-      </ul>
-      <ul aria-hidden="true">
-        <li>Impactando vidas, Para mudar o mundo</li>
-        <li>Impactando vidas, Para mudar o mundo</li>
-        <li>Impactando vidas, Para mudar o mundo</li>
-        <li>Impactando vidas, Para mudar o mundo</li>
-        <li>Impactando vidas, Para mudar o mundo</li>
-        <li>Impactando vidas, Para mudar o mundo</li>
-        <li>Impactando vidas, Para mudar o mundo</li>
-      </ul>
-    </div>
-    <!-- Barra de Navegação -->
-    <nav class="p-4 navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <!-- Logo -->
-        <a href="index.html" aria-label="Rede Comunitá - Página Inicial">
-          <img src="../../assets/img/REDE_COMUNITA.png" class="logo-nav" alt="Logo Rede Comunitá">
-        </a>
-
-        <!-- Botão de Toggle para Mobile -->
-        <a href="#" class="btn highlight-btn ms-3 navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">Inscreva-se</a>
-
-        <!-- Links de Navegação -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link text-dark" href="#sobre">Sobre Nós</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="#programas">Programas e Serviços</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="#impacto">Impacto</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="#participe">Parceiros</a></li>
-          </ul>
-          <!-- Botão de Inscrição -->
-          <a href="#" class="btn highlight-btn ms-3">Inscreva-se</a>
+    <!-- Marquee (Texto rolante de destaque) -->
+    <header class="nav-header">
+        <div class="marquee-text">
+            <ul>
+                <li>Impactando vidas, para mudar o mundo</li>
+                <li>Impactando vidas, para mudar o mundo</li>
+                <li>Impactando vidas, para mudar o mundo</li>
+                <li>Impactando vidas, para mudar o mundo</li>
+                <li>Impactando vidas, para mudar o mundo</li>
+                <li>Impactando vidas, para mudar o mundo</li>
+                <li>Impactando vidas, para mudar o mundo</li>
+            </ul>
+            <ul aria-hidden="true">
+                <li>Impactando vidas, Para mudar o mundo</li>
+                <li>Impactando vidas, Para mudar o mundo</li>
+                <li>Impactando vidas, Para mudar o mundo</li>
+                <li>Impactando vidas, Para mudar o mundo</li>
+                <li>Impactando vidas, Para mudar o mundo</li>
+                <li>Impactando vidas, Para mudar o mundo</li>
+                <li>Impactando vidas, Para mudar o mundo</li>
+            </ul>
         </div>
-      </div>
-    </nav>
-  </header>
+        <!-- Barra de Navegação -->
+        <nav class="p-4 navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <!-- Logo -->
+                <a href="../../index.html" aria-label="Rede Comunitá - Página Inicial">
+                    <img src="../../assets/img/CEDESP.png" class="logo-nav" alt="Logo Rede Comunitá">
+                </a>
 
-  <main>
-    
-    <!-- Seção Área de Técnologia-->
-    <section class="py-5">
-        <div class="container">
-            <div class="curso-sobre">
-                <!-- Coluna da imagem-->
-                <div class="col-md-6 m-5 mb-md-0">
-                    <img src="../../assets/img/img-curso-tecnologia.png" class="img-fluid">
-                </div>
-                <div class="col-md-6">
-                    <section class="w-100 d-flex flex-column align-items-center m-3">
-                        <h1 class="mb-1">Área de Técnologia</h1>
-                        <div class="sublinhado"></div>
-                    </section>
-                    <div class="rect"></div>
-                    <p class="lead"> A área de tecnologia tem se mostrado fundamental para o
-                        desenvolvimento da sociedade moderna. A constante
-                        evolução tecnológica impulsiona a criação de novas
-                        ferramentas e soluções que transformam a forma como
-                        vivemos e trabalhamos. Ao estudar tecnologia, você se equipa
-                        com habilidades essenciais para compreender e interagir com
-                        esse mundo em constante mudança. Além disso, a demanda
-                        por profissionais qualificados na área é cada vez maior, o que
-                        garante um mercado de trabalho.</p>
-                    <p>promissor e com diversas oportunidades de crescimento.
-                        Dominar conhecimentos em tecnologia permite que você
-                        participe ativamente da construção de um futuro mais
-                        inovador e eficiente. Você poderá desenvolver soluções para
-                        problemas complexos, automatizar processos, criar novas
-                        experiências digitais e contribuir para a resolução de desafios
-                        globais. A área de tecnologia oferece um ambiente de
-                        trabalho dinâmico e desafiador, onde a criatividade e a
-                        capacidade de adaptação são altamente valorizadas. Ao
-                        escolher estudar tecnologia, você estará investindo em seu
-                        futuro e abrindo portas para um mundo de possibilidades.</p>
+                <!-- Botão de Toggle para Mobile -->
+                <a href="#" class="btn highlight-btn ms-3 navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">Inscreva-se</a>
+
+                <!-- Links de Navegação -->
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link text-dark" href="#sobre">Sobre Nós</a></li>
+                        <li class="nav-item"><a class="nav-link text-dark" href="#programas">Programas e Serviços</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link text-dark" href="#impacto">Impacto</a></li>
+                        <li class="nav-item"><a class="nav-link text-dark" href="#participe">Parceiros</a></li>
+                    </ul>
+                    <!-- Botão de Inscrição -->
+                    <a href="#" class="btn highlight-btn ms-3">Inscreva-se</a>
                 </div>
             </div>
-        </div>
-    </section>
+        </nav>
+    </header>
 
-    <section class="sessão-info">
-        <img src="../../assets/img/Fundo-Onda.png" class="background-image">
-
-        <div class="card-info">
-            <div class="info">
-                <img src="../../assets/img/tec-logo-1.png" alt="">
-                <h2>R$ 3.000,00 Média salarial</h2>
+    <main>
+        <!-- Seção Área de Técnologia-->
+        <section class="py-5">
+            <div class="container">
+                <div class="curso-sobre">
+                    <!-- Coluna da imagem-->
+                    <div class="col-md-5 m-5 mb-md-0">
+                        <img src="../../assets/img/img-curso-tecnologia.png" class="img-fluid">
+                    </div>
+                    <div class="col-md-6">
+                        <section class="w-100 d-flex flex-column align-items-center m-3">
+                            <h1 class="mb-1">Área de Técnologia</h1>
+                            <div class="sublinhado"></div>
+                        </section>
+                        <section class="col-md-6">
+                            <p class="lead"> A área de tecnologia tem se mostrado fundamental para o
+                                desenvolvimento da sociedade moderna. A constante
+                                evolução tecnológica impulsiona a criação de novas
+                                ferramentas e soluções que transformam a forma como
+                                vivemos e trabalhamos. Ao estudar tecnologia, você se equipa
+                                com habilidades essenciais para compreender e interagir com
+                                esse mundo em constante mudança. Além disso, a demanda
+                                por profissionais qualificados na área é cada vez maior, o que
+                                garante um mercado de trabalho.</p>
+                            <p>promissor e com diversas oportunidades de crescimento.
+                                Dominar conhecimentos em tecnologia permite que você
+                                participe ativamente da construção de um futuro mais
+                                inovador e eficiente. Você poderá desenvolver soluções para
+                                problemas complexos, automatizar processos, criar novas
+                                experiências digitais e contribuir para a resolução de desafios
+                                globais. A área de tecnologia oferece um ambiente de
+                                trabalho dinâmico e desafiador, onde a criatividade e a
+                                capacidade de adaptação são altamente valorizadas. Ao
+                                escolher estudar tecnologia, você estará investindo em seu
+                                futuro e abrindo portas para um mundo de possibilidades.</p>
+                        </section>
+                    </div>
+                </div>
             </div>
-            <div class="info">
-                <img src="../../assets/img/tec-logo-2.png" alt="">
-                <h2>Alta Empregabilidade</h2>
+        </section>
+
+        <section class="sessão-info">
+            <img src="../../assets/img/Fundo-Onda.png" class="background-image">
+
+            <div class="card-info">
+                <div class="info">
+                    <img src="../../assets/img/tec-logo-1.png" alt="">
+                    <h2>R$ 3.000,00 Média salarial</h2>
+                </div>
+                <div class="info">
+                    <img src="../../assets/img/tec-logo-2.png" alt="">
+                    <h2>Alta Empregabilidade</h2>
+                </div>
+                <div class="info">
+                    <img src="../../assets/img/tec-logo-3.png" alt="">
+                    <h2>Possibilidade de Trabalho Remoto</h2>
+                </div>
             </div>
-            <div class="info">
-                <img src="../../assets/img/tec-logo-3.png" alt="">
-                <h2>Possibilidade de Trabalho Remoto</h2>
+        </section>
+
+        <section class="cursos-info">
+
+
+            <div class="d-flex flex-column align-items-center m-3">
+                <h1 class="mb-1">Nossos Cursos</h1>
+                <div class="sublinhado"></div>
+
+                <p class="info-meio">
+                    promissor e com diversas oportunidades de crescimento.
+                    Dominar conhecimentos em tecnologia permite que você participe ativamente da construção de um futuro
+                    mais inovador e eficiente. Você poderá desenvolver soluções para problemas complexos, automatizar
+                    processos, criar novas experiências digitais e contribuir para a resolução de desafios globais. A
+                    área
+                    de tecnologia oferece um ambiente de trabalho dinâmico e desafiador, onde a criatividade e a
+                    capacidade
+                    de adaptação são altamente valorizadas. Ao escolher estudar tecnologia, você estará investindo em
+                    seu
+                    futuro e abrindo portas para um mundo de possibilidades.
+                </p>
             </div>
-        </div>
-    </section>
 
-    <section class="cursos-info">
+            <!-- Cartões dos Programas -->
+            <div class="cards-container">
+                <div class="cards">
+                    <a href="../paginas secundarias/tecnologia/index.html">
+                        <img src="../../assets/img/adm.jpeg" class="img-fluid rounded"
+                            alt="Curso Auxiliar Administrativo">
+                        <h5>Auxiliar Administrativo</h5>
+                    </a>
+                </div>
 
-
-        <div class="d-flex flex-column align-items-center m-3">
-            <h1 class="mb-1">Nossos Cursos</h1>
-            <div class="sublinhado"></div>
-
-            <p class="w-50 m-3">
-                promissor e com diversas oportunidades de crescimento.
-                Dominar conhecimentos em tecnologia permite que você participe ativamente da construção de um futuro
-                mais inovador e eficiente. Você poderá desenvolver soluções para problemas complexos, automatizar
-                processos, criar novas experiências digitais e contribuir para a resolução de desafios globais. A área
-                de tecnologia oferece um ambiente de trabalho dinâmico e desafiador, onde a criatividade e a capacidade
-                de adaptação são altamente valorizadas. Ao escolher estudar tecnologia, você estará investindo em seu
-                futuro e abrindo portas para um mundo de possibilidades.
-            </p>
-        </div>
-
-        <!-- Cartões dos Programas -->
-        <div class="cards-container">
-            <div class="cards">
-                <a href="../paginas secundarias/tecnologia/index.html">
-                <img src="../../assets/img/adm.jpeg" class="img-fluid rounded" alt="Curso Auxiliar Administrativo">
-                <h5>Auxiliar Administrativo</h5>
-                </a>
+                <div class="cards">
+                    <a href="../paginas secundarias/tecnologia/index.html">
+                        <img src="../../assets/img/card-2.jpeg" class="img-fluid rounded" alt="Curso de Tecnologia">
+                        <h5>Curso de Tecnologia</h5>
+                    </a>
+                </div>
             </div>
-    
-            <div class="cards">
-                <a href="../paginas secundarias/tecnologia/index.html">
-                <img src="../../assets/img/card-2.jpeg" class="img-fluid rounded" alt="Curso de Tecnologia">
-                <h5>Curso de Tecnologia</h5>
-                </a>
-            </div>
-        </div>
-    </section>
-  </main>
+        </section>
+    </main>
+    <footer class="footer">
+        <img class="imgfooter imgfooter1" src="../../assets/img/REDE_COMUNITA.png" alt="">
+    </footer>
 
     <!-- Scripts JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
