--- a/pages/cursos/Técnologia.html
+++ b/pages/cursos/Técnologia.html
@@ -51,8 +51,8 @@
     <nav class="p-4 navbar navbar-expand-lg">
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" aria-label="Rede Comunitá - Página Inicial">
-          <img src="../../assets/img/REDE_COMUNITA.png" class="logo-nav" alt="Logo Rede Comunitá">
+        <a href="../../index.html" aria-label="Rede Comunitá - Página Inicial">
+          <img src="../../assets/img/CEDESP.png" class="logo-nav" alt="Logo Rede Comunitá">
         </a>
 
         <!-- Botão de Toggle para Mobile -->
@@ -83,31 +83,33 @@
                         <img src="../../assets/img/img-curso-tecnologia.png" class="img-fluid">
                     </div>
                     <div class="col-md-6">
-                        <section class="w-100 d-flex flex-column align-items-center m-3">
+                        <section class="d-flex flex-column align-items-center m-3">
                             <h1 class="mb-1">Área de Técnologia</h1>
                             <div class="sublinhado"></div>
                         </section>
                         <div class="rect"></div>
-                        <p class="lead"> A área de tecnologia tem se mostrado fundamental para o
-                            desenvolvimento da sociedade moderna. A constante
-                            evolução tecnológica impulsiona a criação de novas
-                            ferramentas e soluções que transformam a forma como
-                            vivemos e trabalhamos. Ao estudar tecnologia, você se equipa
-                            com habilidades essenciais para compreender e interagir com
-                            esse mundo em constante mudança. Além disso, a demanda
-                            por profissionais qualificados na área é cada vez maior, o que
-                            garante um mercado de trabalho.</p>
-                        <p>promissor e com diversas oportunidades de crescimento.
-                            Dominar conhecimentos em tecnologia permite que você
-                            participe ativamente da construção de um futuro mais
-                            inovador e eficiente. Você poderá desenvolver soluções para
-                            problemas complexos, automatizar processos, criar novas
-                            experiências digitais e contribuir para a resolução de desafios
-                            globais. A área de tecnologia oferece um ambiente de
-                            trabalho dinâmico e desafiador, onde a criatividade e a
-                            capacidade de adaptação são altamente valorizadas. Ao
-                            escolher estudar tecnologia, você estará investindo em seu
-                            futuro e abrindo portas para um mundo de possibilidades.</p>
+                        <div class="dinamic-aling">
+                            <p> A área de tecnologia tem se mostrado fundamental para o
+                                desenvolvimento da sociedade moderna. A constante
+                                evolução tecnológica impulsiona a criação de novas
+                                ferramentas e soluções que transformam a forma como
+                                vivemos e trabalhamos. Ao estudar tecnologia, você se equipa
+                                com habilidades essenciais para compreender e interagir com
+                                esse mundo em constante mudança. Além disso, a demanda
+                                por profissionais qualificados na área é cada vez maior, o que
+                                garante um mercado de trabalho.</p>
+                            <p>promissor e com diversas oportunidades de crescimento.
+                                Dominar conhecimentos em tecnologia permite que você
+                                participe ativamente da construção de um futuro mais
+                                inovador e eficiente. Você poderá desenvolver soluções para
+                                problemas complexos, automatizar processos, criar novas
+                                experiências digitais e contribuir para a resolução de desafios
+                                globais. A área de tecnologia oferece um ambiente de
+                                trabalho dinâmico e desafiador, onde a criatividade e a
+                                capacidade de adaptação são altamente valorizadas. Ao
+                                escolher estudar tecnologia, você estará investindo em seu
+                                futuro e abrindo portas para um mundo de possibilidades.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,7 +141,7 @@
                 <h1 class="mb-1">Nossos Cursos</h1>
                 <div class="sublinhado"></div>
     
-                <p class="w-50 m-3">
+                <p class="info-curso m-3 dinamic-aling">
                     promissor e com diversas oportunidades de crescimento.
                     Dominar conhecimentos em tecnologia permite que você participe ativamente da construção de um futuro
                     mais inovador e eficiente. Você poderá desenvolver soluções para problemas complexos, automatizar
@@ -168,6 +170,7 @@
             </div>
         </section>
   </main>
+  <footer class="footer"></footer>
 
     <!-- Scripts JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
