--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Título da página -->
   <title>Rede Comunitá | Programas e Impacto Social</title>
-  <link rel="icon" href="./assets/img/CORACAO_COMUNITA.png" type="image/png">
+  <link rel="icon" href="./assets/img/CORACAO_COMUNITA.png" type="image/x-icon">
   <!-- Links do Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -53,7 +53,7 @@
       <div class="container-fluid">
         <!-- Logo -->
         <a href="index.html" aria-label="Rede Comunitá - Página Inicial">
-          <img src="./assets/img/REDE_COMUNITA.png" class="logo-nav" alt="Logo Rede Comunitá">
+          <img src="./assets/img/CEDESP.png" class="logo-nav" alt="Logo Rede Comunitá">
         </a>
 
         <!-- Botão de Toggle para Mobile -->
@@ -103,7 +103,7 @@
 
   <section class="sobre-nos" id="sobre">
     <section class="textosub">
-      <h2 class="mb-1">Sobre nós</h2>
+      <h1 class="mb-1">Sobre nós</h2>
       <div class="sublinhado"></div>
     </section>
 
@@ -121,7 +121,7 @@
           Para acesso ao serviço é preciso de um encaminhamento validado pelo CRAS, respeitando a data de início do curso e a escolaridade exigida em acordo com a especificidade do curso, tendo em vista a necessidade para o desenvolvimento das habilidades específicas. O Centro de Desenvolvimento Social e Produtivo – CEDESP tem funcionamento de segunda a sexta-feira, em turnos de quatro horas para o período diurno e três horas para o noturno.
       </p>
       <figure class="mobile-image">
-        <img src="./assets/img/educandos-sobre.png" class="educandos" alt="">
+        <img src="./assets/img/educando-mobile.png" class="educandos-mobile" alt="">
       </figure>
     </div>
   </section>
@@ -130,7 +130,7 @@
     <section id="programas" class="py-5">
       <div class="container text-center">
         <section class="textosub">
-          <h2 class="mb-1">Conheça Nossos Serviços</h2>
+          <h1 class="mb-1">Nossos Cursos</h2>
           <div class="sublinhado"></div>
         </div>
         </section>
@@ -138,35 +138,35 @@
         <!-- Cartões dos Programas -->
         <div class="cards-container">
             <div class="cards">
-              <a href="../paginas secundarias/tecnologia/index.html">
+              <a href="./pages/cursos/Técnologia.html">
                 <img src="./assets/img/adm.jpeg" class="img-fluid rounded" alt="Curso Auxiliar Administrativo">
                 <h5>Auxiliar Administrativo</h5>
               </a>
             </div>
   
             <div class="cards">
-              <a href="../paginas secundarias/tecnologia/index.html">
+              <a href="./pages/cursos/Técnologia.html">
                 <img src="./assets/img/card-2.jpeg" class="img-fluid rounded" alt="Curso de Tecnologia">
                 <h5>Curso de Tecnologia</h5>
               </a>
             </div>
   
             <div class="cards">
-              <a href="../paginas secundarias/tecnologia/index.html">
+              <a href="./pages/cursos/teste-sobre.html">
                 <img src="./assets/img/0' Quadra.jpg" class="img-fluid rounded" alt="Curso de Elétrica">
                 <h5>Mundo do trabalho e Convívio</h5>
               </a>
             </div>
   
             <div class="cards">
-              <a href="../paginas secundarias/tecnologia/index.html">
+              <a href="./pages/cursos/teste-sobre.html">
                 <img src="./assets/img/card-3.jpeg" class="img-fluid rounded" alt="Curso de Mecânica Automotiva">
                 <h5>Mecânica Automotiva</h5>
               </a>
             </div>
   
             <div class="cards">
-              <a href="../paginas secundarias/tecnologia/index.html">
+              <a href="./pages/cursos/teste-sobre.html">
                 <img src="./assets/img/card-4.jpg" class="img-fluid rounded" alt="Curso de Elétrica">
                 <h5>Curso de Elétrica</h5>
               </a>
@@ -192,13 +192,16 @@
     </div>
   </section>
 
-  <section>
-    <div class="d-flex flex-column align-items-center m-5">
+  <section class="d-flex flex-column align-items-center ">
+    <div class="d-flex flex-column align-items-center mt-5">
       <h1 class="mb-1">Localização</h1>
       <div class="sublinhado"></div>
     </div>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.5839977737355!2d-46.4566389!3d-23.6192479!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce68bf85a77935%3A0x7297bb201bd75388!2sR.%20Chantal%2C%2028%20-%20Vila%20Bela%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008346-517!5e0!3m2!1ses-419!2sbr!4v1734625717581!5m2!1ses-419!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="info-meio m-3">
+      <h3>R. Chantal, 28 - Vila Bela, São Paulo - SP, 08346-517</h3>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.5839977737355!2d-46.4566389!3d-23.6192479!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce68bf85a77935%3A0x7297bb201bd75388!2sR.%20Chantal%2C%2028%20-%20Vila%20Bela%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008346-517!5e0!3m2!1ses-419!2sbr!4v1734625717581!5m2!1ses-419!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
   </section>
   </main>
   <!-- Scripts JavaScript -->
@@ -210,6 +213,15 @@
     crossorigin="anonymous"></script>
 
   <script src="./assets/js/script.js"></script>
+
+  <footer class="footer-pagina p-4">
+    <img src="./assets/img/CEDESP-BRANCO.png" class="h-100 p-4" alt="">
+    <div class="flex-column">
+      <small>© 2024 Minha Empresa. Todos os direitos reservados.</small>
+      <small>Site criado pelos alunos do cedesp.</small>
+    </div>
+  </footer>
+
 </body>
 
 </html>
